tests/errors/type-error-assign.ja
procedure main()
    int x[5]
    int y[3]

    x += y
